--- a/src/components/LiveTickerWrapper/LiveTickerWrapper.scss
+++ b/src/components/LiveTickerWrapper/LiveTickerWrapper.scss
@@ -1,48 +1,58 @@
 $tablet-width: 800px;
 
-.liveTickerWrapper {
-  margin: 30px auto;
+.liveTickerWrapperGuide {
+  flex: 1;
 
   display: flex;
-  flex-direction: column;
+  justify-content: center;
 
-  .liveTickerWrapperTitle {
-    font-size: 18px;
-    letter-spacing: -0.5px;
-    color: #397ff4;
-  }
-
-  .liveTickerWrapperContent {
-    font-size: 60px;
+  .liveTickerWrapper {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    max-width: 50vw;
 
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    justify-content: space-around;
+    flex-direction: column;
 
-    div + div {
-      margin-left: 10px;
-    }
-
-    .liveTickerWrapperContentSuffix {
-      font-size: 30px;
-      font-weight: 100;
-      padding-bottom: 5px;
-    }
-  }
-
-  @media (max-width: $tablet-width) {
     .liveTickerWrapperTitle {
-      align-self: center;
+      font-size: 18px;
+      letter-spacing: -0.5px;
+      color: #397ff4;
     }
+
     .liveTickerWrapperContent {
-      padding: 5px;
-      font-size: 26px;
+      font-size: 60px;
+
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-end;
+      justify-content: space-around;
+
+      div + div {
+        margin-left: 10px;
+      }
 
       .liveTickerWrapperContentSuffix {
-        font-size: 24px;
-        padding-bottom: 0px;
+        font-size: 30px;
+        font-weight: 100;
+        padding-bottom: 5px;
+      }
+    }
+
+    @media (max-width: $tablet-width) {
+      .liveTickerWrapperTitle {
+        align-self: center;
+      }
+      .liveTickerWrapperContent {
+        padding: 5px;
+        font-size: 26px;
+
+        .liveTickerWrapperContentSuffix {
+          font-size: 24px;
+          padding-bottom: 0px;
+        }
       }
     }
   }
+
 }
