--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -90,7 +90,7 @@ $footer-margin-height: 50px;
       position: absolute;
       z-index: -1;
       height: 500px;
-      width: 100vw;
+      width: 200vw;
       background: white;
     }
 
